# image-mini

./: .gitmodules  Dockerfile-original  pyproject.toml
.github/workflows/: main.yml
addons/dependencies/: __manifest__.py
